@@ -1,4 +1,4 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -6,13 +6,13 @@ DESCRIPTION="C library to make the use of LV2 plugins as simple as possible for 
 HOMEPAGE="http://drobilla.net/software/lilv"
 SRC_URI=""
 
-LICENSE=""
+LICENSE="ISC"
 KEYWORDS=""
 SLOT="0"
 IUSE=""
 
 RDEPEND=""
-DEPEND="${RDEPEND}"
+DEPEND=""
 
 pkg_postinst() {
 	einfo "This ebuild is a fake aimed to satisfy portage dependencies"
