@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/lilv
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  17 Jun 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  lilv-9999.ebuild:
+  Added a license.
 
   27 Dec 2012; Dominique Michel <dominique_libre@sourceforge.net>
   +lilv-9999.ebuild: Initial ebuild aimed to satisfy portage
